@@ -22,6 +22,9 @@
     18-05-2009 J-Donald Tournier <d.tournier@brain.org.au>
     * reset scale & offset of output image to ensure proper binary output
 
+    09-11-2010 Robert E. Smith <r.smith@brain.org.au>
+    * added non-binary output option
+
 */
 
 #include "app.h"
@@ -35,14 +38,14 @@ using namespace MR;
 SET_VERSION_DEFAULT;
 
 DESCRIPTION = {
- "create bitwise image by thresholding image intensity.",
+ "create (optionally bitwise) image by thresholding image intensity.",
  "By default, the threshold level is determined using a histogram analysis to cut out the background. Otherwise, the threshold intensity can be specified using command line options. Note that only the first study is used for thresholding.",
   NULL
 };
 
 ARGUMENTS = {
-  Argument ("input", "input image", "the input image to be thresholded.").type_image_in (),
-  Argument ("output", "output image", "the output binary image mask.").type_image_out (),
+  Argument ("input",  "input image",  "the input image to be thresholded.").type_image_in (),
+  Argument ("output", "output image", "the output image.")                 .type_image_out (),
   Argument::End
 };
 
@@ -54,6 +57,8 @@ OPTIONS = {
   Option ("percent", "percentage threshold", "specify threshold value as a percentage of the peak intensity in the input image.")
     .append (Argument ("value", "value", "the percentage threshold to use.").type_float (NAN, NAN, 0.0)),
 
+  Option ("nonbinary", "non-binary", "output image retains original image intensities above the threshold (for a non-binary image output)"),
+
   Option ("invert", "invert mask.", "invert output binary mask."),
 
   Option ("nan", "use NaN.", "replace all zero values with NaN."),
@@ -64,7 +69,7 @@ OPTIONS = {
 
 EXECUTE {
 
-  bool use_percentage = false, invert = false, use_NaN = false, optimise = true;
+  bool use_percentage = false, optimise = true;
   float val = NAN;
 
   std::vector<OptBase> opt = get_options (0);
@@ -81,19 +86,21 @@ EXECUTE {
     val = opt[0][0].get_float();
   }
 
-  if (get_options(2).size()) invert = true;
-  if (get_options(3).size()) use_NaN = true;
+  const bool binary  = !get_options(2).size();
+  const bool invert  =  get_options(3).size();
+  const bool use_NaN =  get_options(4).size();
 
   Image::Position in (*argument[0].get_image());
   Image::Header header (in.image.header());
 
   if (in.is_complex()) header.data_type = DataType::CFloat32;
-  else {
-    if (use_NaN) header.data_type = DataType::Float32;
-    else header.data_type = DataType::Bit;
+  else if (use_NaN)    header.data_type = DataType::Float32;
+  else if (binary)     header.data_type = DataType::Bit;
+
+  if (binary) {
+    header.offset = 0.0;
+    header.scale = 1.0;
   }
-  header.offset = 0.0;
-  header.scale = 1.0;
 
   Image::Position out (*argument[1].get_image (header));
 
@@ -117,10 +124,10 @@ EXECUTE {
   do {
     in = out;
     float v = in.re();
-    out.re (v > val ? one : zero);
+    out.re (v > val ? (binary ? one : v) : zero);
     if (out.is_complex()) {
       v = in.im();
-      out.im (v > val ? one : zero);
+      out.im (v > val ? (binary ? one : v) : zero);
     }
 
     ProgressBar::inc();
